--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "framer-motion": "^12.23.18",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
