--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://r1derPUSH.github.io/react-project",
-  "name": "react-project",
+  "homepage": "https://r1derPUSH.github.io/focus-flow",
+  "name": "focus-flow",
   "private": true,
   "version": "0.0.0",
   "type": "module",
